# xallennlp

./: .allennlp_plugins  .gitignore  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: main.yml
configs/: basic_classifier.jsonnet  mrc_for_ner.jsonnet
scripts/data/mrc_ner/: get_ace04.sh
tests/: test_utils.py
tests/commands/: test_train_with_mlflow.py  test_tune_with_mlflow.py
tests/data/dataset_readers/: test_mrc_for_ner.py  test_mrc_for_ner_reader.py  test_preprocess_reader.py  test_scierc.py
tests/data/token_indexers/: test_fasttext_indexer.py  test_minhash_token_indexer.py  test_pretrained_transformer_minhash_indexer.py
tests/data/tokenizers/: test_fugashi_tokenizer.py
tests/fixtures/configs/: basic_classifier.jsonnet  basic_classifier_experiment.jsonnet  basic_classifier_hparams.json  mrc_for_ner.jsonnet
tests/fixtures/data/: imdb_corpus.jsonl  mrc_ner.json  mrc_ner.jsonl  scierc.jsonl
tests/models/: test_mrc_for_ner.py
tests/modules/: test_distances.py  test_feedforward.py  test_highway_seq2seq_encoder.py  test_residual_seq2seq_encoder.py
tests/modules/seq2seq_encoders/: test_fnet_encoder.py  test_highway_seq2seq_encoder.py  test_hypermixer.py  test_mlp_mixer.py  test_residual_seq2seq_encoder.py  test_self_attention_encoder.py  test_unconst_compose_encoder.py  test_window_concat_encoder.py
tests/modules/seq2vec_encoders/: test_compose_seq2vec_encoder.py  test_concat_seq2vec_encoder.py  test_pooling_sec2vec_encoder.py
tests/modules/span_extractors/: test_concat_span_extractor.py  test_pooling_span_extractor.py
tests/modules/token_embedders/: test_fasttext_embedder.py
xallennlp/: __init__.py  __main__.py  utils.py
xallennlp/commands/: __init__.py  train.py  train_with_mlflow.py  train_with_wandb.py  tune_with_mlflow.py  xtrain.py
xallennlp/data/: __init__.py
xallennlp/data/dataset_readers/: __init__.py  mrc_for_ner.py  preprocess_reader.py  scierc.py
xallennlp/data/preprocessors/: __init__.py  lowercase.py  pipeline.py  preprocessor.py
xallennlp/data/token_indexers/: __init__.py  fasttext_subword_token_indexer.py  fasttext_token_indexer.py  minhash_token_indexer.py  pretrained_transformer_minhash_indexer.py
xallennlp/data/tokenizers/: __init__.py  fugashi_tokenizer.py
xallennlp/models/: __init__.py  mrc_for_ner.py
xallennlp/modules/: __init__.py  distances.py  feedforward.py
xallennlp/modules/seq2seq_encoders/: __init__.py  fnet_encoder.py  highway_seq2seq_encoder.py  hypermixer.py  mlp_mixer.py  residual_seq2seq_encoder.py  self_attention_encoder.py  unconst_compose_encoder.py  window_concat_encoder.py
xallennlp/modules/seq2vec_encoders/: __init__.py  compose_seq2vec_encoder.py  concat_seq2vec_encoder.py  pooling_sec2vec_encoder.py
xallennlp/modules/span_extractors/: __init__.py  concat_span_extractor.py  pooling_span_extractor.py
xallennlp/modules/token_embedders/: __init__.py  fasttext_embedder.py
xallennlp/training/: __init__.py  mlflow_callback.py  mlflow_checkpointer.py
