[tool.poetry]
name = "xallennlp"
version = "0.1.0"
description = "Expanded AllenNLP"
authors = ["altescy <altescy@fastmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
allennlp = ">=1.0.0"
mlflow = "^1.9.0"
flatten_dict = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"

[tool.poetry.scripts]
xallennlp = "xallennlp.__main__:run"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
